# PromptPatch

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_flow.md  claude_desktop_config.json  security_scan.md
src/promptpatch_mcp/: __init__.py  security.py  server.py  store.py
tests/: test_store.py
