[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "promptpatch-mcp"
version = "0.1.0"
description = "Local-first MCP server for prompt diffs, rollback, releases, and security scans."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "PromptPatch Contributors" }]
keywords = ["mcp", "prompt-engineering", "sqlite", "version-control"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control",
]
dependencies = [
  "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
promptpatch-mcp = "promptpatch_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/promptpatch_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
